[gd_scene load_steps=9 format=3 uid="uid://chxff3xxo7qn2"]

[ext_resource type="Script" path="res://player.gd" id="1_7vtfk"]
[ext_resource type="Texture2D" uid="uid://vc7fsssuw2mr" path="res://assets/player_sprite-Sheet.png" id="1_jxlbb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pcks4"]
atlas = ExtResource("1_jxlbb")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i6g1"]
atlas = ExtResource("1_jxlbb")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhusm"]
atlas = ExtResource("1_jxlbb")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7vuq"]
atlas = ExtResource("1_jxlbb")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_yp4ya"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcks4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i6g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhusm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7vuq")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v7ykx"]
radius = 27.0
height = 100.0

[node name="Player" type="Area2D"]
script = ExtResource("1_7vtfk")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_yp4ya")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_v7ykx")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
